# kmsxx

./: CMakeLists.txt  meson.build
kms++/inc/kms++/: mappedframebuffer.h
kms++/src/: dumbframebuffer.cpp
kms++util/: meson.build
kms++util/src/: testpat.cpp
kmscube/: meson.build
py/pykms/: meson.build
tests/: CMakeLists.txt  wbtest.cpp
utils/: CMakeLists.txt  kmscapture.cpp  kmstest.cpp
